@@ -20,7 +20,10 @@
 */
 
 #define AES256_API
-#define HAVE_LOG2 // for mariadb
+#include <mysql_version.h>
+#if MYSQL_VERSION_ID < 100100
+	#define HAVE_LOG2 // for mariadb
+#endif
 
 #include <my_global.h>
 #include <m_string.h>
